--- a/style.scss
+++ b/style.scss
@@ -270,7 +270,7 @@ $es-grey: #ffecf9;
         }
         &__textCtn{
             padding: 5px;
-            background-image: url(./img/teal-bg.png);
+            background-image: url("https://raw.githubusercontent.com/eStoreLabs/230206-KF-02-Klosterfrau-Nasic-kids-OLMED/master/img/teal-bg.png");
             background-repeat: no-repeat;
             background-size: contain;
             width: 100px;
@@ -282,7 +282,7 @@ $es-grey: #ffecf9;
             bottom: 0;
             left: -20px;
             &--kids{
-                background-image: url(./img/blue-bg.png);
+                background-image: url("https://raw.githubusercontent.com/eStoreLabs/230206-KF-02-Klosterfrau-Nasic-kids-OLMED/master/img/blue-bg.png");
                 background-position: bottom;
                 margin-top: -40px;
             }
@@ -362,7 +362,7 @@ $es-grey: #ffecf9;
     
   @media screen and (min-width: 900px){
     .es-kv{
-        background-image: url(./img/kv-shadow.png);
+        background-image: url("https://raw.githubusercontent.com/eStoreLabs/230206-KF-02-Klosterfrau-Nasic-kids-OLMED/master/img/kv-shadow.png");
         flex-direction: row;
         align-items: flex-end;
         &__heroCtn{
